Correcting deploy issues

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-MONGOOSE_API = 'mongodb+srv://vulpescodes:NJDevils1@cluster0.0ivrd.mongodb.net/sample_mflix?retryWrites=true&w=majority'
+MONGOOSE_API = 'mongodb+srv://vulpescodes:NJDevils1@cluster0.0ivrd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
